--- a/GraphAlgorithms/pom.xml
+++ b/GraphAlgorithms/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>algorithms</groupId>
-    <artifactId>algorithms</artifactId>
+    <artifactId>Algorithms</artifactId>
     <version>${revision}</version>
   </parent>
 	
