--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <java.version>1.8</java.version>
     <lombok.version>1.18.10</lombok.version>
     <commons.io.version>2.6</commons.io.version>
+    <commons.collections4.version>4.1</commons.collections4.version>
     <junit.jupiter.engine.version>5.4.0</junit.jupiter.engine.version>
     <exp4j.version>0.4.8</exp4j.version>
     <maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
@@ -65,6 +66,13 @@
       <artifactId>exp4j</artifactId>
       <version>${exp4j.version}</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>${commons.collections4.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
