Implementing traveling salesman problem. Started with simple code to take in a "world" with cities.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <modules>
     <module>GraphAlgorithms</module>
     <module>SearchAlgorithms</module>
+    <module>Problems</module>
   </modules>
   
   <properties>
