--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <java.version>1.8</java.version>
     <lombok.version>1.18.10</lombok.version>
     <commons.io.version>2.6</commons.io.version>
+    <commons.lang3.version>3.9</commons.lang3.version>
     <commons.collections4.version>4.1</commons.collections4.version>
     <junit.jupiter.engine.version>5.4.0</junit.jupiter.engine.version>
     <exp4j.version>0.4.8</exp4j.version>
@@ -33,6 +34,18 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>${commons.io.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>${commons.collections4.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${commons.lang3.version}</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     <dependency>
@@ -66,12 +79,6 @@
       <groupId>net.objecthunter</groupId>
       <artifactId>exp4j</artifactId>
       <version>${exp4j.version}</version>
-    </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-collections4</artifactId>
-      <version>${commons.collections4.version}</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.jvnet.jaxb2.maven2/maven-jaxb2-plugin -->
     <dependency>
