Renamed a GraphAlgorithms module to TreeTraversalAlgorithms Added module for Genetic Algorithms.

--- a/GeneticAlgorithms/pom.xml
+++ b/GeneticAlgorithms/pom.xml
@@ -2,16 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>algorithms</groupId>
     <artifactId>Algorithms</artifactId>
     <version>${revision}</version>
   </parent>
-	
-  <groupId>algorithms.graph</groupId>
-  <artifactId>GraphAlgorithms</artifactId>
+
+  <groupId>algorithms.genetic</groupId>
+  <artifactId>GeneticAlgorithms</artifactId>
   <version>${revision}</version>
-  <name>Graph Algorithms</name>
+  <name>Genetic Algorithms</name>
+
+
+
 
 </project>
