--- a/TreeTraversalAlgorithms/pom.xml
+++ b/TreeTraversalAlgorithms/pom.xml
@@ -2,16 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>algorithms</groupId>
     <artifactId>Algorithms</artifactId>
     <version>${revision}</version>
   </parent>
-
-  <groupId>algorithms.problems</groupId>
-  <artifactId>Problems</artifactId>
+	
+  <groupId>algorithms.tree.traversal</groupId>
+  <artifactId>TreeTraversalAlgorithms</artifactId>
   <version>${revision}</version>
-  <name>Problems</name>
-
+  <name>Tree Traversal Algorithms</name>
 
 </project>
