Started implemenation for a Hopfield Neural Network

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>Problems</module>
     <module>GeneticAlgorithms</module>
     <module>ParticleSwarmAlgorithms</module>
+    <module>NeuralNetworkAlgorithms</module>
   </modules>
   
   <properties>
